# library-system

./: .gitignore  CMakeLists.txt  LoadTesting.md  Makefile  README.md  main.cpp  units.py  units_sqlite.py
client/: CMakeLists.txt  main.cpp
client/ConsoleUI/: ConsolePresenter.cpp  ConsolePresenter.h
client/GUI/Main/Admin/: AdminMainView.ui
client/GUI/Main/Librarain/: LibrarianMainPresenter.cpp  LibrarianMainPresenter.h  LibrarianMainView.ui
client/GUI/Main/Reader/: ReaderMainPresenter.h
client/GUI/Registration/Admin/: RegistrationAdminController.h
client/GUI/Registration/Librarian/: RegistrationLibrarianController.h
client/GUI/Registration/Reader/: RegistrationReaderController.h
client/Model/: Client.hpp  DTOs.hpp  Model.cpp  Model.h
client/Model/Entities/Account/: Account.cpp  LibrarianAccount.cpp
server/: CMakeLists.txt  config.json  config_postgres.json  config_sqlite.json  e2e.py  itest_config.json  main.cpp
server/Configuration/: Configuration.h  FileConfiguration.cpp  FileConfiguration.h
server/Database/: CMakeLists.txt  DatabseException.cpp  DatabseException.h
server/Database/Connection/: BenchSession.hpp  Connection.cpp  Connection.h  IConnectionPool.cpp  IConnectionPool.h  RoleConnection.h  Session.cpp  Session.h  SociConnectionPool.cpp  SociConnectionPool.h  SociSession.hpp  TestSession.hpp
server/Database/DataAccessFacade/: DataAccessFacade.cpp  DataAccessFacade.h  PostgresDataAccessFacade.h
server/Database/DataAccessFacade/Commands/: Command.cpp  Command.h
server/Database/DataAccessFacade/Commands/AccountCommands/: GetLibrarianAccountCommand.h  GetReaderAccountCommand.h
server/Database/DataAccessFacade/Commands/AddBooksCommand/: AddBooksCommand.cpp  AddBooksCommand.h
server/Database/DataAccessFacade/Commands/AuthCommand/: AuthCommand.cpp  AuthCommand.h
server/Database/DataAccessFacade/Commands/BookCommands/: AddBooksCommand.cpp  AddBooksCommand.h  DeleteBooksCommand.cpp  DeleteBooksCommand.h  GetBooksByLoginCommand.cpp  GetBooksByLoginCommand.h  GetFreeBooksCommand.cpp  GetFreeBooksCommand.h  UpdateBookCommand.cpp  UpdateBookCommand.h
server/Database/DataAccessFacade/Commands/DeleteAccounts/: DeleteAdminAccountCommand.h  DeleteLibrarianAccountCommand.h  DeleteReaderAccountCommand.h
server/Database/DataAccessFacade/Commands/DeleteDatabaseCommand/: DeleteDatabaseCommand.h
server/Database/DataAccessFacade/Commands/EBookCommands/: AddEBooksCommand.h  DeleteEBookCommand.h  GetEBooksCommand.h  UpdateEBookCommand.h
server/Database/DataAccessFacade/Commands/Filters/: Filter.h
server/Database/DataAccessFacade/Commands/GetAccounts/: GetLibrarianAccountCommand.h  GetReaderAccountCommand.h
server/Database/DataAccessFacade/Commands/GetBooksCommands/: DeleteBooksCommand.cpp  DeleteBooksCommand.h  GetBooksByLoginCommand.cpp  GetBooksByLoginCommand.h  GetFreeBooksCommand.cpp  GetFreeBooksCommand.h  UpdateBookCommand.cpp  UpdateBookCommand.h
server/Database/Entities/DBAccount/: AccountConverter.h  AccountRepository.cpp  AccountRepository.h  DBAccount.h  IAccountRepository.h
server/Database/Entities/DBBook/: BookConverter.cpp  BookConverter.h  BookRepository.cpp  BookRepository.h  DBBook.h  IBookRepository.h
server/Database/Entities/DBEBook/: DBEBook.h  DBEBookMappings.h  EBookConverter.h  EBookRepository.cpp  EBookRepository.h  IEBookRepository.h
server/Database/Entities/DBLibrary/: DBLibrary.cpp  DBLibrary.h  ILibraryRepository.h  LibraryConverter.cpp  LibraryConverter.h  LibraryRepository.cpp  LibraryRepository.h
server/Database/SqlIoc/: IocRepository.h  SqlIoc.h
server/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
server/Logic/: CMakeLists.txt  LogicException.cpp  LogicException.h
server/Logic/Configuration/: Configuration.h  FileConfiguration.cpp  FileConfiguration.h
server/Logic/DataAccessManager/: DataAccessManager.cpp  DataAccessManager.h  DataAccessManagerRest.cpp  DataAccessManagerRest.h
server/Logic/Entities/Account/: Account.cpp  Account.h  AdminAccount.cpp  AdminAccount.h  LibrarianAccount.cpp  LibrarianAccount.h  ReaderAccount.cpp  ReaderAccount.h
server/Logic/Entities/Book/: Book.h
server/Logic/Entities/EBook/: EBook.h
server/Logic/Server/Controller/: JWTAuth.cpp  JWTAuth.h  ServerController.h  ServerControllerRestApi.h
server/Logic/Server/DTOs/: DTOs.h  DTOsRestApi.h
server/Logic/Server/ServerSettings/: IocRepositories.h  ServerSettings.h
server/benchmark/: CMakeLists.txt  bench.cpp
server/docker/: Dockerfile
server/docker/jwt/: cmake_install.cmake  install_manifest.txt
server/docker/jwt/example/: cmake_install.cmake
server/docker/libressl/: .gitignore
server/docker/soci/: CHANGES  CMakeLists.txt
server/docker/soci/docs/: 404.html  index.html  sitemap.xml
server/integration_test/: CMakeLists.txt  itest.cpp
server/main/: CMakeLists.txt  main.cpp
server/test/: CMakeLists.txt  TestingSession.cpp  TestingSession.h  UnitTest.cpp  UnitTest.h  test.cpp
server/test/Mocks/: AccountRepositoryMock.cpp  AccountRepositoryMock.h  AdminAccountRepositoryMock.cpp  AdminAccountRepositoryMock.h  BookRepositoryMock.cpp  BookRepositoryMock.h  LibrarianAccountRepositoryMock.cpp  LibrarianAccountRepositoryMock.h  LibraryRepositoryMock.cpp  LibraryRepositoryMock.h  ReaderAccountRepositoryMock.cpp  ReaderAccountRepositoryMock.h
server/test/ObjectMothers/: AccountsObjectMother.cpp  AccountsObjectMother.h  AdminAccountsObjectMother.cpp  AdminAccountsObjectMother.h  BooksObjectMother.cpp  BooksObjectMother.h  LibrarianAccountsObjectMother.cpp  LibrarianAccountsObjectMother.h  LibrariesObjectMother.cpp  LibrariesObjectMother.h  ReaderAccountsObjectMother.cpp  ReaderAccountsObjectMother.h
server/test/Stubs/: AccountSpecificationStub.h  AdminAccountSpecificationStub.h  BookSpecificationStub.h  LibrarianAccountSpecificationStub.h  LibrarySpecificationStub.h  ReaderAccountSpecificationStub.h
server/test/TestDirections/: TestAccountCommands.h  TestAccounts.h  TestAdminAccounts.h  TestBookCommands.h  TestBooks.h  TestLibrarianAccounts.h  TestLibraries.h  TestLibrariesCommands.h  TestReaderAccounts.h
(+360 files in other folders)
